# puser

./: LICENSE  README.md  pyproject.toml
.github/workflows/: make_mac_user.sh  setup_ssh.sh  ssh_func.sh  test.yml
src/puser/: __init__.py  __main__.py  putils.py
