[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "puser"
authors = [{name = "Matthew Brett", email = "matthew.brett@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: BSD License",
               "Programming Language :: Python :: 3",
               'Development Status :: 3 - Alpha',
               'Operating System :: Microsoft :: Windows',
               'Operating System :: POSIX',
               'Operating System :: Unix',
               'Operating System :: MacOS']
dynamic = ["version", "description"]
description-file="README.md"

[project.urls]
Home = "https://github.com/matthew-brett/puser"

[project.scripts]
puser-config = "puser.__main__:main"
